# ChangeLog for dev-util/confix
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/confix/ChangeLog,v 1.20 2013/11/05 14:29:15 haubi Exp $

  05 Nov 2013; Michael Haubenwallner <haubi@gentoo.org> confix-9999.ebuild:
  Follow upstream repository move.

  08 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  confix-2.3.5-r1.ebuild, confix-9999.ebuild:
  Fix dependencies. Set SUPPORT_PYTHON_ABIS (bug #324385).

  08 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/2.1.0/CALL_RESCAN_HACK.patch, -files/2.1.0/exeext.patch,
  -files/2.1.0/ext-ac-archive.patch, -files/2.1.0/fast-install.patch,
  -confix-2.1.0.ebuild, -files/2.1.0/local-libs-first.patch,
  -confix-2.1.0-r4.ebuild, -files/2.1.0/private-headers.patch,
  -confix-2.3.0-r3.ebuild:
  Delete.

*confix-2.3.5-r1 (26 Dec 2010)

  26 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org> -confix-2.3.5.ebuild,
  +confix-2.3.5-r1.ebuild:
  QA: revbump confix that was obviously meant to be patched but was missing an
  eutils inherit.

*confix-2.3.5 (29 Oct 2010)

  29 Oct 2010; Markus Duft <mduft@gentoo.org> +confix-2.3.5.ebuild,
  confix-9999.ebuild:
  add new version, update/fix live ebuild

  11 Oct 2010; Michael Haubenwallner <haubi@gentoo.org>
  confix-2.1.0-r4.ebuild:
  pass non-prefix cpv to has_version (#340515).
  add missing eutils inherit to have epatch do anything useful.

  28 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  confix-2.3.0-r3.ebuild:
  Add missing eutils inherit, this casued the package to patch nothing.

*confix-2.3.0-r3 (13 Jul 2010)
*confix-2.1.0-r4 (13 Jul 2010)

  13 Jul 2010; Markus Duft <mduft@gentoo.org>
  +files/2.1.0/local-libs-first.patch, -files/2.2.0/exeext.patch,
  -files/2.2.0/ext-ac-archive.patch, +files/2.3.0/exeext.patch,
  +files/2.3.0/ext-ac-archive.patch, +files/2.3.0/local-libs-first.patch,
  +files/2.3.0/new-automake.patch, -confix-2.1.0-r3.ebuild,