@@ -7,14 +7,14 @@ AUX 2.3.0/ext-ac-archive.patch 1515 SHA256 6713126639eaffa18ec22d5c7c4e3091b0bf3
 AUX 2.3.0/local-libs-first.patch 1871 SHA256 5a4ac9bfe8778c10952b5e0cfa33c835b8dd5f66d64f9fcd251fffd0b19c9459 SHA512 1b6196c7fa4e132c1bd2013e559f4db8b21ea8497c5771cb7bd51e11efae9fd2e4c08af6a07bb6b911961f9e29ec4de683c7a5245a786002eef1f13894a6e533 WHIRLPOOL 5e431e5ebe9b3b725155a1f82e6519a21daa4760fd3c02e5e7516e20b99c3011211be5579b2b0377df2d9cd8d344e7ba8bdf8d05ac5b7cdc08d5ef0667f37909
 AUX 2.3.0/new-automake.patch 573 SHA256 28190dc46beee0f163a9f64d8e523232d73864948cc06e9e9e35b98645df160e SHA512 216e4bcb753107107bb3e0f6e303984b5b282fbe80c72c97e7365c0729a3007b6f960b1ee3c4a311a5b5b81c179ab1daa171da5eec33900e158b8a73cc9f0338 WHIRLPOOL 3b711789b29d4108ae5d911c4b62f207af4370d78d56655302dbced3905483165f9e2e60bf83e6daa02432e86119a015e66a1681eeace66e30c9fc9d1d00ed10
 DIST Confix-2.3.5.tar.bz2 678133 SHA256 b1a2814526c908ab32d6cfd3f0e8b8105c925a7e8ac1802c4b0856d44a2a9916 SHA512 e6adec0cd27e9064dd0f6ff32d2e68deb755631a27759b253a7a176525b515ffc9069b8f28ac48ee6fdb642dfc2098fd2d7d6bd6e4ecccd43cb92df12c48e4c7 WHIRLPOOL e9412d3a4619679301f8816fd4de3a267cf3b9ed57967bbbb29bd8219147f8c1643b4e610d06a8de5433ca3f4101b689e351717d386c86fd34c3725e48666bde
-EBUILD confix-2.3.5-r1.ebuild 2158 SHA256 85113baed6f13c5872fd2d722720b99c98169e1fcd0f6db19eb8d6e643eb2bb3 SHA512 36c5bb3f2ed9789c70d6c5a8c429b667e4a529b62ab46c3b6f5fc852b78d7e8f5feaa6ea7f3c5636f37ae98e1221c6efe916294048ee36f3f7582fb8eb9f257a WHIRLPOOL db6c874c3ebbd0e5e0eb510c6b9983aa047aa9eeb0232594210893b9f5970b63260b151d6e1437ce17ee72daf8079d48004e9443e1f812429e50d534edb5fe44
-EBUILD confix-9999.ebuild 2066 SHA256 16006e2df2e20e3cd0375b9bb0d0ceb11b50b6824ba53444c4e1f26ff8deff26 SHA512 a972c46e3c0a5cd8d7443da875884fd7cec1ed986e9767fd3162431759027ec79b8527b0f2edda431a5d2b547f087831b2fca40959ba4406bf01138b944cb58b WHIRLPOOL fd95dd6d5fa0cc33865f140eec4c97e904a2aafb7b662a9b337005c23170a3b55014d748394ccfb54a6272a02af987f2fd92859fd28271fb386c0ad383be8c2f
-MISC ChangeLog 4126 SHA256 ccabf46411bb49a5d4e4bd8a9c23266f3fec69a1b5db9155a8c460997f6a9b28 SHA512 ee78d17732df7d6d86327a00661de5b28952cabf695ca4b66215b197aeb4fbcaae1161047b85bc5640c8a4ea8943ff3396e97d4939f82a48f4b096c82fabfac0 WHIRLPOOL 1a08b89f5ea46b975001f6ad20a2fc6409a4b7e866540ef27356d9a43a6233f6409b8f282d7d7990d68c52c7070e28d75ee85b6dbfce610ae187c276d820affd
+EBUILD confix-2.3.5-r2.ebuild 2112 SHA256 bed5fb28f67ca5564f2af525ccdecab2bb47bc87f5f8f9731e84f801cb5b8330 SHA512 0602444377e48e9a800e5ccb2cac484cb642ad4ee66424155b40654d75cae3caa31d3d6dff5c04748987749fc3f7aef84be1ea82a373dad1c161a12b5219a627 WHIRLPOOL 49758615fe204da5ffdcb50db4d9f0d293cd42c010b1ec91c41051ab98eaabc6f89162c8658ea964a8575972ac57df1e26a6d0c4e27473e585e6b4c6abe506a6
+EBUILD confix-9999.ebuild 2023 SHA256 90eb3f0281fe806dcfae45bcbdc27c3bebfe993b88ad014ab587269dd09d672a SHA512 672ec32ea5437fbca2cfca3cdfc9b29a72b386484a81042330d0ef5bc085097205c2a71a9b70c241963c14279dcad188ed058758d76301c7304a09acdb7ad009 WHIRLPOOL e592c129ee085b2dc220e0f01dacff52997f82bc01ac1b95e897a8403d2eefaf551bc066691bdac0974667d01a902ea1edc013cc8152cfde655942ec028a2f75
+MISC ChangeLog 4401 SHA256 cfdd8283ca2855b629fbbb3f0bd2dfe86363901ac80fa5ba38547a17d49b71b9 SHA512 357cf74e01bbc1abe8977335d1621eefe30eadb16b00e4137ec3bbf99c46f182955312e810dca621b536c47a7f5bc1d24cea8746efcf819ef23fc162079d2083 WHIRLPOOL fc839d73f4f513720f2ac2bddf819bebc0fa7252949a567a0d9e2c1ffe696aafd35d0b72f30873584575bc228be3c3d1b5d3a44f39ba04a749ea168ff52a2881
 MISC metadata.xml 288 SHA256 898cc72da5e8e3dd1b85c717b8f0ea5ad3bcd619abdde1d1ea957265b662c7b1 SHA512 4766bd055e209e89a54bdc686ea031270f6a2635923c9502c94c181eb282234a9a60c29c2b9cef1a2c07a3d5a90d21e477818a6b5bbd10d77dadb6953a3ffa0e WHIRLPOOL 97dc83ac22605c4f7bd208b718c7bccf0b36596bb14ad711dbbb15beea4570595e3cfddcf8cb20b092036e8ec7c1352f0b88cfdda8c461047bc818f358ffa8ba
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlJ5AL8ACgkQLc0TWKYwzLhmBgCeOZeC751yAHKIiR8ByUd7jOdX
-eLQAn0TxnKL1SeeI9O7hNLbWTbUFbPJK
-=3Whj
+iEYEAREIAAYFAlTxxHsACgkQso7CE7gHKw1ZJQCeIZSioaU4B0DJluy2LNvtwO6Z
+rHwAoIQrmZg1CtaSUAu6+50wQdZB+4sy
+=jUSD
 -----END PGP SIGNATURE-----
